Feat: add maths functions

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Maths</title>
 </head>
 
 <body>
-    <h1 class="heading"><img src="assets/images/logo.png" alt="logo" class="logo"></h1>
+    <h1 class="heading"><img src="assets/images/logo.png" alt="logo" class="logo">Love Maths</h1>
 
     <div class="game-area">
         <div class="controls-area">
